test/errors/identifiers_error/zs/prefix_zserio/struct_name_error.zs
package prefix_zserio.struct_name_error;

struct StructZserio
{
    uint32 value;
};

struct ZserioStruct // zserio prefix!
{
    string value;
};
